# Project-Lambda

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  GPU_Grid_Checklist.md  LICENSE  NOTICE.md  README.md  STYLEGUIDE.md
.github/workflows/: ci.yml
apps/: CMakeLists.txt
apps/cradle/: main.cpp
core/: ArgParser.hpp  CMakeLists.txt  Clock.hpp  Constants.hpp  Matrix3.hpp  Matrix4.hpp  Real.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
engine/: CMakeLists.txt
include/core/: ColorConversions.hpp  LDColor.hpp  TypeLimits.hpp
include/gpu/: GPURenderQueue.hpp  IRenderable.hpp  LDGraphicsAPI.hpp
include/math/: Camera.h  MathConstants.hpp  MathFunctions.hpp  Matrices.hpp  Numbers.hpp  Vectors.hpp
include/state/: EngineState.hpp
include/window/: LDWindowAPI.hpp
paper/: NewtonsCradleCheckpoint.md  NewtonsCradleRoadmap.md  README.tex
physics/: CMakeLists.txt
physics/include/lambda/physics/: IRigidBody.hpp  PhysicsWorld.hpp  RigidBody.hpp
physics/include/lambda/physics/colliders/: AABBCollider.hpp  ICollider.hpp  SphereCollider.hpp
physics/src/: PhysicsWorld.cpp  RigidBody.cpp
physics/src/colliders/: AABBCollider.cpp  SphereCollider.cpp
prome/: CMakeLists.txt
scripts/: format.sh  lint.sh
src/: LDWindowAPI.cpp  main.cpp
static/: Clock.hpp
tests/: CMakeLists.txt  PhysicsWorldTests.cpp
tests/math/: CameraTests.cpp  MathFunctionsTests.cpp  MatricesTests.cpp  NumbersTests.cpp  VectorsTests.cpp
tests/window/: LDWindowAPITests.cpp  LDWindowBlankWindowTests.cpp
